--- a/Regresión/Regresion_Bajas_Antiguedad.ipynb
+++ b/Regresión/Regresion_Bajas_Antiguedad.ipynb
@@ -50,7 +50,7 @@
         "auth.authenticate_user()\n",
         "gc = gspread.authorize (GoogleCredentials.get_application_default())"
       ],
-      "execution_count": 294,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -66,7 +66,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "y_VVpj56uzRV",
-        "outputId": "319abbf0-3eef-4dbb-955b-3f42d3c50def",
+        "outputId": "d5049efe-20c3-434b-f25b-5fc6fc6dd724",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -76,7 +76,7 @@
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 295,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -97,7 +97,7 @@
         "x = data1.iloc [:,:-1].values\n",
         "y = data1.iloc [:,2].values"
       ],
-      "execution_count": 296,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -124,7 +124,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "1xHeUpIU59aN",
-        "outputId": "2b3b6941-68b2-4383-a4f9-8be6e5ade41f",
+        "outputId": "91b76d39-807d-4e53-8a1d-e9fa69c8a701",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 282
@@ -135,12 +135,11 @@
         "from sklearn.compose import ColumnTransformer\n",
         "labelencoder  = LabelEncoder()\n",
         "labelencoder  = LabelEncoder()\n",
-        "x[:,0] = labelencoder.fit_transform(x[:,0])\n",
         "x[:,1] = labelencoder.fit_transform(x[:,1])\n",
-        "ct = ColumnTransformer([('one_hot_encoder',OneHotEncoder(categories='auto'),[0,1])],remainder='passthrough')\n",
-        "x= np.array(ct.fit_transform(x[:,0:2]),dtype=np.integer)"
+        "ct = ColumnTransformer([('one_hot_encoder',OneHotEncoder(categories='auto'),[1])],remainder='passthrough')\n",
+        "x= np.array(ct.fit_transform(x),dtype=np.integer)"
       ],
-      "execution_count": 305,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "error",
@@ -152,7 +151,7 @@
             "\u001b[0;31mTypeError\u001b[0m: int() argument must be a string, a bytes-like object or a number, not 'csr_matrix'",
             "\nThe above exception was the direct cause of the following exception:\n",
             "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-305-c8f2376379ed>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlabelencoder\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit_transform\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0mct\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mColumnTransformer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'one_hot_encoder'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mOneHotEncoder\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcategories\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'auto'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mremainder\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'passthrough'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m \u001b[0mx\u001b[0m\u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mct\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit_transform\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mdtype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minteger\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m<ipython-input-7-9da2c2a4d2df>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlabelencoder\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit_transform\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0mct\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mColumnTransformer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'one_hot_encoder'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mOneHotEncoder\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcategories\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'auto'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mremainder\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'passthrough'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0mx\u001b[0m\u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mct\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit_transform\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mdtype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minteger\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
             "\u001b[0;31mValueError\u001b[0m: setting an array element with a sequence."
           ]
         }
@@ -161,128 +160,13 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "nmeZH3I84EtO",
-        "outputId": "e6443e2a-b20f-4ef6-dd80-86887837ef04",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 419
-        }
+        "id": "nmeZH3I84EtO"
       },
       "source": [
         "pd.DataFrame(x)"
       ],
-      "execution_count": 302,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/html": [
-              "<div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>0</th>\n",
-              "      <th>1</th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <th>0</th>\n",
-              "      <td>201908</td>\n",
-              "      <td>5</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>1</th>\n",
-              "      <td>201908</td>\n",
-              "      <td>3</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2</th>\n",
-              "      <td>201908</td>\n",
-              "      <td>4</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>3</th>\n",
-              "      <td>201908</td>\n",
-              "      <td>2</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>4</th>\n",
-              "      <td>201908</td>\n",
-              "      <td>1</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>...</th>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>77</th>\n",
-              "      <td>202008</td>\n",
-              "      <td>3</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>78</th>\n",
-              "      <td>202008</td>\n",
-              "      <td>7</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>79</th>\n",
-              "      <td>202008</td>\n",
-              "      <td>2</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>80</th>\n",
-              "      <td>202008</td>\n",
-              "      <td>1</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>81</th>\n",
-              "      <td>202008</td>\n",
-              "      <td>4</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "<p>82 rows × 2 columns</p>\n",
-              "</div>"
-            ],
-            "text/plain": [
-              "         0  1\n",
-              "0   201908  5\n",
-              "1   201908  3\n",
-              "2   201908  4\n",
-              "3   201908  2\n",
-              "4   201908  1\n",
-              "..     ... ..\n",
-              "77  202008  3\n",
-              "78  202008  7\n",
-              "79  202008  2\n",
-              "80  202008  1\n",
-              "81  202008  4\n",
-              "\n",
-              "[82 rows x 2 columns]"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 302
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -322,7 +206,7 @@
         "from sklearn.model_selection import train_test_split\n",
         "x_train, x_test, y_train, y_test = train_test_split(x,y,test_size= 0.2, random_state=0)"
       ],
-      "execution_count": 270,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -374,13 +258,95 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "x4teI7B4o9ew"
+        "id": "x4teI7B4o9ew",
+        "outputId": "01801bb2-05c1-470d-efc6-8925991dc5bf",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 1000
+        }
       },
       "source": [
         "x_train"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[202007, '1_3_ANIOS'],\n",
+              "       [202003, '4_TRIM'],\n",
+              "       [202002, '4_TRIM'],\n",
+              "       [201909, '2_TRIM'],\n",
+              "       [201908, '3_TRIM'],\n",
+              "       [202004, '4_6_ANIOS'],\n",
+              "       [201909, '4_6_ANIOS'],\n",
+              "       [202006, '1_3_ANIOS'],\n",
+              "       [202003, '1_TRIM'],\n",
+              "       [202004, '2_TRIM'],\n",
+              "       [201912, '4_6_ANIOS'],\n",
+              "       [202002, '1_3_ANIOS'],\n",
+              "       [202008, 'MAYOR_6_ANIOS'],\n",
+              "       [201908, '2_TRIM'],\n",
+              "       [202005, '3_TRIM'],\n",
+              "       [201910, '4_TRIM'],\n",
+              "       [202005, '4_TRIM'],\n",
+              "       [202007, '4_6_ANIOS'],\n",
+              "       [202005, '2_TRIM'],\n",
+              "       [202001, '4_TRIM'],\n",
+              "       [201912, '4_TRIM'],\n",
+              "       [201909, '3_TRIM'],\n",
+              "       [202005, '4_6_ANIOS'],\n",
+              "       [201911, '1_3_ANIOS'],\n",
+              "       [201909, '4_TRIM'],\n",
+              "       [202001, '1_3_ANIOS'],\n",
+              "       [202007, 'MAYOR_6_ANIOS'],\n",
+              "       [202007, '4_TRIM'],\n",
+              "       [201908, '4_TRIM'],\n",
+              "       [202001, '3_TRIM'],\n",
+              "       [202007, '3_TRIM'],\n",
+              "       [201910, '1_TRIM'],\n",
+              "       [202004, '1_3_ANIOS'],\n",
+              "       [201911, '1_TRIM'],\n",
+              "       [201912, '2_TRIM'],\n",
+              "       [202006, 'MAYOR_6_ANIOS'],\n",
+              "       [202004, '1_TRIM'],\n",
+              "       [201911, '2_TRIM'],\n",
+              "       [202001, '1_TRIM'],\n",
+              "       [201910, 'MAYOR_6_ANIOS'],\n",
+              "       [201908, '4_6_ANIOS'],\n",
+              "       [202008, '1_3_ANIOS'],\n",
+              "       [201910, '4_6_ANIOS'],\n",
+              "       [201908, '1_3_ANIOS'],\n",
+              "       [202006, '4_TRIM'],\n",
+              "       [201910, '3_TRIM'],\n",
+              "       [202004, '4_TRIM'],\n",
+              "       [201911, '4_TRIM'],\n",
+              "       [202008, '4_TRIM'],\n",
+              "       [201912, '3_TRIM'],\n",
+              "       [202002, '4_6_ANIOS'],\n",
+              "       [202003, '4_6_ANIOS'],\n",
+              "       [202002, '3_TRIM'],\n",
+              "       [202006, '4_6_ANIOS'],\n",
+              "       [202005, '1_3_ANIOS'],\n",
+              "       [201910, '2_TRIM'],\n",
+              "       [202007, '2_TRIM'],\n",
+              "       [202001, '2_TRIM'],\n",
+              "       [201911, '3_TRIM'],\n",
+              "       [201909, '1_3_ANIOS'],\n",
+              "       [202008, '3_TRIM'],\n",
+              "       [202006, '1_TRIM'],\n",
+              "       [202006, '2_TRIM'],\n",
+              "       [202003, '2_TRIM'],\n",
+              "       [202003, '1_3_ANIOS']], dtype=object)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 12
+        }
+      ]
     },
     {
       "cell_type": "markdown",
