--- a/Regresión/Regresion_Bajas_Antiguedad.ipynb
+++ b/Regresión/Regresion_Bajas_Antiguedad.ipynb
@@ -50,7 +50,7 @@
         "auth.authenticate_user()\n",
         "gc = gspread.authorize (GoogleCredentials.get_application_default())"
       ],
-      "execution_count": 15,
+      "execution_count": 24,
       "outputs": []
     },
     {
@@ -66,7 +66,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "y_VVpj56uzRV",
-        "outputId": "f752f740-fe72-44a0-90b5-d64877ae34a2",
+        "outputId": "c4492d7a-f730-4aa2-c424-b9de4f0440bf",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -76,7 +76,7 @@
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 16,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "stream",
@@ -93,18 +93,18 @@
         "id": "0JYqth2Ty8-k"
       },
       "source": [
-        "data1 = pd.read_csv('/content/drive/My Drive/Dataset/DBajas_ANTIGUEDAD.txt',delimiter='~')\n",
+        "data1 = pd.read_csv('/content/drive/My Drive/Dataset/DBajas_ANTIGUEDAD2.txt',delimiter='~')\n",
         "x = data1.iloc [:,:-1].values\n",
         "y = data1.iloc [:,2].values"
       ],
-      "execution_count": 17,
+      "execution_count": 26,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "EYca9i97JQXc",
-        "outputId": "908ddef4-28eb-4a0e-c4f3-4c2d6cb43713",
+        "outputId": "925a9352-c817-404d-b4a8-50917a70560d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
@@ -113,100 +113,100 @@
       "source": [
         "x"
       ],
-      "execution_count": 18,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([[201908, '4_6_ANIOS'],\n",
-              "       [201908, '4_TRIM'],\n",
-              "       [201908, '1_TRIM'],\n",
-              "       [201908, '3_TRIM'],\n",
-              "       [201908, '2_TRIM'],\n",
-              "       [201908, '1_3_ANIOS'],\n",
-              "       [201909, '2_TRIM'],\n",
-              "       [201909, '4_6_ANIOS'],\n",
-              "       [201909, '1_TRIM'],\n",
-              "       [201909, '1_3_ANIOS'],\n",
-              "       [201909, '4_TRIM'],\n",
-              "       [201909, '3_TRIM'],\n",
-              "       [201910, '2_TRIM'],\n",
-              "       [201910, '1_3_ANIOS'],\n",
-              "       [201910, '1_TRIM'],\n",
-              "       [201910, '4_6_ANIOS'],\n",
-              "       [201910, '3_TRIM'],\n",
-              "       [201910, '4_TRIM'],\n",
-              "       [201910, 'MAYOR_6_ANIOS'],\n",
-              "       [201911, '1_TRIM'],\n",
-              "       [201911, '4_TRIM'],\n",
-              "       [201911, '3_TRIM'],\n",
-              "       [201911, '4_6_ANIOS'],\n",
-              "       [201911, '1_3_ANIOS'],\n",
-              "       [201911, '2_TRIM'],\n",
-              "       [201912, '3_TRIM'],\n",
-              "       [201912, '4_6_ANIOS'],\n",
-              "       [201912, '1_3_ANIOS'],\n",
-              "       [201912, '4_TRIM'],\n",
-              "       [201912, '2_TRIM'],\n",
-              "       [201912, '1_TRIM'],\n",
-              "       [202001, '1_3_ANIOS'],\n",
-              "       [202001, '3_TRIM'],\n",
-              "       [202001, '4_6_ANIOS'],\n",
-              "       [202001, '4_TRIM'],\n",
-              "       [202001, '1_TRIM'],\n",
-              "       [202001, '2_TRIM'],\n",
-              "       [202002, '4_6_ANIOS'],\n",
-              "       [202002, '4_TRIM'],\n",
-              "       [202002, '3_TRIM'],\n",
-              "       [202002, '2_TRIM'],\n",
-              "       [202002, '1_3_ANIOS'],\n",
-              "       [202002, '1_TRIM'],\n",
-              "       [202003, '3_TRIM'],\n",
-              "       [202003, '1_3_ANIOS'],\n",
-              "       [202003, '1_TRIM'],\n",
-              "       [202003, '4_6_ANIOS'],\n",
-              "       [202003, '2_TRIM'],\n",
-              "       [202003, '4_TRIM'],\n",
-              "       [202004, '1_TRIM'],\n",
-              "       [202004, '1_3_ANIOS'],\n",
-              "       [202004, '4_TRIM'],\n",
-              "       [202004, '4_6_ANIOS'],\n",
-              "       [202004, '3_TRIM'],\n",
-              "       [202004, '2_TRIM'],\n",
-              "       [202005, '4_6_ANIOS'],\n",
-              "       [202005, '1_TRIM'],\n",
-              "       [202005, '2_TRIM'],\n",
-              "       [202005, '1_3_ANIOS'],\n",
-              "       [202005, '3_TRIM'],\n",
-              "       [202005, '4_TRIM'],\n",
-              "       [202006, 'MAYOR_6_ANIOS'],\n",
-              "       [202006, '3_TRIM'],\n",
-              "       [202006, '4_TRIM'],\n",
-              "       [202006, '2_TRIM'],\n",
-              "       [202006, '4_6_ANIOS'],\n",
-              "       [202006, '1_3_ANIOS'],\n",
-              "       [202006, '1_TRIM'],\n",
-              "       [202007, 'MAYOR_6_ANIOS'],\n",
-              "       [202007, '3_TRIM'],\n",
-              "       [202007, '2_TRIM'],\n",
-              "       [202007, '4_6_ANIOS'],\n",
-              "       [202007, '1_TRIM'],\n",
-              "       [202007, '4_TRIM'],\n",
-              "       [202007, '1_3_ANIOS'],\n",
-              "       [202008, '4_6_ANIOS'],\n",
-              "       [202008, '4_TRIM'],\n",
-              "       [202008, '2_TRIM'],\n",
-              "       [202008, '3_TRIM'],\n",
-              "       [202008, '1_TRIM'],\n",
-              "       [202008, '1_3_ANIOS'],\n",
-              "       [202008, 'MAYOR_6_ANIOS']], dtype=object)"
+              "array([[201908,      5],\n",
+              "       [201908,      3],\n",
+              "       [201908,      4],\n",
+              "       [201908,      2],\n",
+              "       [201908,      1],\n",
+              "       [201908,      6],\n",
+              "       [201909,      5],\n",
+              "       [201909,      3],\n",
+              "       [201909,      6],\n",
+              "       [201909,      2],\n",
+              "       [201909,      4],\n",
+              "       [201909,      1],\n",
+              "       [201910,      5],\n",
+              "       [201910,      3],\n",
+              "       [201910,      7],\n",
+              "       [201910,      4],\n",
+              "       [201910,      2],\n",
+              "       [201910,      6],\n",
+              "       [201910,      1],\n",
+              "       [201911,      5],\n",
+              "       [201911,      4],\n",
+              "       [201911,      6],\n",
+              "       [201911,      3],\n",
+              "       [201911,      1],\n",
+              "       [201911,      2],\n",
+              "       [201912,      5],\n",
+              "       [201912,      1],\n",
+              "       [201912,      6],\n",
+              "       [201912,      3],\n",
+              "       [201912,      4],\n",
+              "       [201912,      2],\n",
+              "       [202001,      3],\n",
+              "       [202001,      4],\n",
+              "       [202001,      2],\n",
+              "       [202001,      6],\n",
+              "       [202001,      5],\n",
+              "       [202001,      1],\n",
+              "       [202002,      4],\n",
+              "       [202002,      3],\n",
+              "       [202002,      1],\n",
+              "       [202002,      2],\n",
+              "       [202002,      5],\n",
+              "       [202002,      6],\n",
+              "       [202003,      2],\n",
+              "       [202003,      1],\n",
+              "       [202003,      4],\n",
+              "       [202003,      6],\n",
+              "       [202003,      5],\n",
+              "       [202003,      3],\n",
+              "       [202004,      1],\n",
+              "       [202004,      4],\n",
+              "       [202004,      2],\n",
+              "       [202004,      5],\n",
+              "       [202004,      6],\n",
+              "       [202004,      3],\n",
+              "       [202005,      2],\n",
+              "       [202005,      4],\n",
+              "       [202005,      5],\n",
+              "       [202005,      1],\n",
+              "       [202005,      3],\n",
+              "       [202005,      6],\n",
+              "       [202006,      3],\n",
+              "       [202006,      2],\n",
+              "       [202006,      1],\n",
+              "       [202006,      5],\n",
+              "       [202006,      7],\n",
+              "       [202006,      6],\n",
+              "       [202006,      4],\n",
+              "       [202007,      3],\n",
+              "       [202007,      5],\n",
+              "       [202007,      6],\n",
+              "       [202007,      1],\n",
+              "       [202007,      2],\n",
+              "       [202007,      4],\n",
+              "       [202007,      7],\n",
+              "       [202008,      6],\n",
+              "       [202008,      5],\n",
+              "       [202008,      3],\n",
+              "       [202008,      7],\n",
+              "       [202008,      2],\n",
+              "       [202008,      1],\n",
+              "       [202008,      4]])"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 18
+          "execution_count": 27
         }
       ]
     },
@@ -222,164 +222,29 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "1xHeUpIU59aN",
-        "outputId": "66550b64-32a2-45be-9c04-b8e6b4cb1cfe",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 282
-        }
+        "id": "1xHeUpIU59aN"
       },
       "source": [
-        "from sklearn.preprocessing import LabelEncoder, OneHotEncoder\n",
+        "'''from sklearn.preprocessing import LabelEncoder, OneHotEncoder\n",
         "from sklearn.compose import ColumnTransformer\n",
         "labelencoder  = LabelEncoder()\n",
         "x[:,1] = labelencoder.fit_transform(x[:,1])\n",
         "ct = ColumnTransformer([('one_hot_encoder',OneHotEncoder(categories='auto'),[1])],remainder='passthrough')\n",
-        "x= np.array(ct.fit_transform(x[:,0:2]),dtype=np.integer)"
+        "x= np.array(ct.fit_transform(x[:,0:2]),dtype=np.int)'''"
       ],
-      "execution_count": 22,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "ValueError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;31mTypeError\u001b[0m: int() argument must be a string, a bytes-like object or a number, not 'csr_matrix'",
-            "\nThe above exception was the direct cause of the following exception:\n",
-            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-22-e58a7a852c1f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlabelencoder\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit_transform\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mct\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mColumnTransformer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'one_hot_encoder'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mOneHotEncoder\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcategories\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'auto'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mremainder\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'passthrough'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0mx\u001b[0m\u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mct\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit_transform\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mdtype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minteger\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mValueError\u001b[0m: setting an array element with a sequence."
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "nmeZH3I84EtO",
-        "outputId": "f4f88947-3a56-4493-f7a7-20d1d95e57be",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 419
-        }
+        "id": "nmeZH3I84EtO"
       },
       "source": [
-        "pd.DataFrame(x)"
+        "'''pd.DataFrame(x)'''"
       ],
-      "execution_count": 21,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/html": [
-              "<div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>0</th>\n",
-              "      <th>1</th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <th>0</th>\n",
-              "      <td>201908</td>\n",
-              "      <td>4</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>1</th>\n",
-              "      <td>201908</td>\n",
-              "      <td>5</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2</th>\n",
-              "      <td>201908</td>\n",
-              "      <td>1</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>3</th>\n",
-              "      <td>201908</td>\n",
-              "      <td>3</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>4</th>\n",
-              "      <td>201908</td>\n",
-              "      <td>2</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>...</th>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>77</th>\n",
-              "      <td>202008</td>\n",
-              "      <td>2</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>78</th>\n",
-              "      <td>202008</td>\n",
-              "      <td>3</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>79</th>\n",
-              "      <td>202008</td>\n",
-              "      <td>1</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>80</th>\n",
-              "      <td>202008</td>\n",
-              "      <td>0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>81</th>\n",
-              "      <td>202008</td>\n",
-              "      <td>6</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "<p>82 rows × 2 columns</p>\n",
-              "</div>"
-            ],
-            "text/plain": [
-              "         0  1\n",
-              "0   201908  4\n",
-              "1   201908  5\n",
-              "2   201908  1\n",
-              "3   201908  3\n",
-              "4   201908  2\n",
-              "..     ... ..\n",
-              "77  202008  2\n",
-              "78  202008  3\n",
-              "79  202008  1\n",
-              "80  202008  0\n",
-              "81  202008  6\n",
-              "\n",
-              "[82 rows x 2 columns]"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 21
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
